# pywebsite

./: .gitignore  README.md  pyproject.toml
pywebsite/: config.py  main.py
pywebsite/app/: __init__.py
pywebsite/app/routers/: __init__.py  main.py  resume.py
pywebsite/app/templates/: head_meta.html  resume_temp.html
static/css/: main.css
static/js/: manifest.json
