[tool.poetry]
name = "pywebsite"
version = "0.1.0"
description = ""
authors = ["karrless <konstantin.geydarov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
SQLAlchemy = "^2.0.36"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
start = "pywebsite.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
